# finthnif

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
app-electron/: app.js  package-lock.json  package.json  template.html  webpack.config.js
app-electron/src/: blueprint.css  index.js  styles.css
backend/: Cargo.toml  docker-compose.yml
backend/docker/: docker-compose.yaml
backend/sql/: drivers.sql
backend/src/: main.rs
backend/src/models/: mod.rs
finthnif/: Cargo.toml
finthnif/migrations/: 20210322125455_driver.sql
finthnif/src/: lib.rs
finthnif/src/models/driver/: dto.rs  mod.rs  model.rs
frontend/: Cargo.toml
frontend/src/: assign_dialog.rs  creat_driver_dialog.rs  create_driver.rs  create_driver_dialog.rs  create_travel_dialog.rs  day_selector.rs  driver_board.rs  driver_schedule.rs  driver_selector.rs  hour_selector.rs  lib.rs  timeline.rs  travel_board.rs
server-graphql/: Cargo.toml
server-graphql/src/: main.rs
server-graphql/src/models/: mod.rs
server-graphql/src/models/driver/: mod.rs  query.rs
