[package]
name = "backend"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@iomentum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "finthnif_lib"
path = "src/lib.rs"

[[bin]]
name = "finthnif_server"
path = "src/main.rs"


[dependencies]
async-graphql = "2.0.7"
async-graphql-warp = "2.0.7"
http = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.5"