[package]
name = "backend"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@iomentum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "finthnif_lib"
path = "src/lib.rs"

[[bin]]
name = "finthnif_server"
path = "src/main.rs"


[dependencies]
async-graphql = "2.0"
async-graphql-actix-web = "2.0"
actix-web = "3.2"
actix-rt = "1.1"