[package]
name = "server-graphql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.0"
async-graphql-warp = "2.0"
finthnif = {path = "../finthnif"}
http = "0.2"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
